--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -55,3 +55,9 @@
   --ifm-color-primary-lightest: #5bb1bf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+
+/* img {
+
+  border: var(--ifm-color-primary-light) 4px solid;
+} */
